[package]
name = "code4rena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking", "json"]}
tokio = { version = "1.18", features = ["full"] }
ethers-solc = "2.0"
scraper = "0.16.0"
dotenv = "0.15.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1"
serde_tuple = "0.5"
anyhow = "1.0.70"
tracing = "0.1.37"
base64 = "0.21.0"
hex = "0.4.3"
chrono = "0.4"